generated/AdaGrammarParser.py
# Generated from AdaGrammar.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AdaGrammarParser ( Parser ):

    grammarFileName = "AdaGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'abs'", "'access'", "'all'", "'and'", 
                     "'array'", "'at'", "'begin'", "'body'", "'case'", "'constant'", 
                     "'declare'", "'do'", "'else'", "'elsif'", "'end'", 
                     "'exit'", "'for'", "'function'", "'if'", "'in'", "'is'", 
                     "'limited'", "'loop'", "'mod'", "'new'", "'not'", "'null'", 
                     "'of'", "'or'", "'others'", "'package'", "'pragma'", 
                     "'private'", "'procedure'", "'protected'", "'range'", 
                     "'record'", "'return'", "'reverse'", "'subtype'", "'tagged'", 
                     "'task'", "'then'", "'type'", "'use'", "'when'", "'while'", 
                     "'with'", "'xor'", "<INVALID>", "'+'", "'-'", "'*'", 
                     "'/'", "'='", "'/='", "'<'", "'>'", "'<='", "'>='", 
                     "'<>'", "':='", "'&'", "'**'", "','", "';'", "':'", 
                     "'('", "')'", "'['", "']'", "'.'", "'..'", "'=>'" ]

    symbolicNames = [ "<INVALID>", "ABS", "ACCESS", "ALL", "AND", "ARRAY", 
                      "AT", "BEGIN", "BODY", "CASE", "CONSTANT", "DECLARE", 
                      "DO", "ELSE", "ELSIF", "END", "EXIT", "FOR", "FUNCTION", 
                      "IF", "IN", "IS", "LIMITED", "LOOP", "MOD", "NEW", 
                      "NOT", "NULL", "OF", "OR", "OTHERS", "PACKAGE", "PRAGMA", 
                      "PRIVATE", "PROCEDURE", "PROTECTED", "RANGE", "RECORD", 
                      "RETURN", "REVERSE", "SUBTYPE", "TAGGED", "TASK", 
                      "THEN", "TYPE", "USE", "WHEN", "WHILE", "WITH", "XOR", 
                      "ID", "ADD", "SUB", "MUL", "DIV", "EQUALS", "NOTEQUALS", 
                      "LT", "GT", "LTE", "GTE", "BOX", "ASSIGN", "CONCAT", 
                      "POW", "COMMA", "SEMICOLON", "COLON", "LPAREN", "RPAREN", 
                      "LEFT_BRACKET", "RIGHT_BRACKET", "PERIOD", "DOT_DOT", 
                      "ARROW", "INT", "FLOAT", "CHAR", "STRING", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS" ]

    RULE_program = 0
    RULE_package_declaration = 1
    RULE_subprogram_declaration = 2
    RULE_subprogram_specification = 3
    RULE_subprogram_head = 4
    RULE_formal_part = 5
    RULE_subprogram_body = 6
    RULE_task_declaration = 7
    RULE_task_body = 8
    RULE_protected_type_declaration = 9
    RULE_protected_type_body = 10
    RULE_subunit = 11
    RULE_type_declaration = 12
    RULE_type_definition = 13
    RULE_enumeration_type_definition = 14
    RULE_array_type_definition = 15
    RULE_index_subtype_definition = 16
    RULE_subtype_mark = 17
    RULE_component_subtype_definition = 18
    RULE_record_type_definition = 19
    RULE_component_list = 20
    RULE_component_declaration = 21
    RULE_access_type_definition = 22
    RULE_protected_type_definition = 23
    RULE_tagged_type_definition = 24
    RULE_limited_type_definition = 25
    RULE_subtype_definition = 26
    RULE_subtype_indication = 27
    RULE_constant_declaration = 28
    RULE_variable_declaration = 29
    RULE_expression = 30
    RULE_relation = 31
    RULE_relational_operator = 32
    RULE_simple_expression = 33
    RULE_unary_adding_operator = 34
    RULE_binary_adding_operator = 35
    RULE_term = 36
    RULE_factor = 37
    RULE_primary = 38
    RULE_aggregate = 39
    RULE_element_association = 40
    RULE_qualified_expression = 41
    RULE_function_call = 42
    RULE_actual_parameter = 43
    RULE_assignment_statement = 44
    RULE_target = 45
    RULE_procedure_call_statement = 46
    RULE_sequence_of_statements = 47
    RULE_statement = 48
    RULE_simple_statement = 49
    RULE_if_statement = 50
    RULE_condition = 51
    RULE_case_statement = 52
    RULE_case_statement_alternative = 53
    RULE_choice_list = 54
    RULE_loop_statement = 55
    RULE_iteration_scheme = 56
    RULE_basic_loop = 57
    RULE_for_loop = 58
    RULE_discrete_range = 59
    RULE_range = 60
    RULE_while_loop = 61
    RULE_begin_end_block = 62
    RULE_exit_statement = 63
    RULE_return_statement = 64
    RULE_null_statement = 65

    ruleNames =  [ "program", "package_declaration", "subprogram_declaration", 
                   "subprogram_specification", "subprogram_head", "formal_part", 
                   "subprogram_body", "task_declaration", "task_body", "protected_type_declaration", 
                   "protected_type_body", "subunit", "type_declaration", 
                   "type_definition", "enumeration_type_definition", "array_type_definition", 
                   "index_subtype_definition", "subtype_mark", "component_subtype_definition", 
                   "record_type_definition", "component_list", "component_declaration", 
                   "access_type_definition", "protected_type_definition", 
                   "tagged_type_definition", "limited_type_definition", 
                   "subtype_definition", "subtype_indication", "constant_declaration", 
                   "variable_declaration", "expression", "relation", "relational_operator", 
                   "simple_expression", "unary_adding_operator", "binary_adding_operator", 
                   "term", "factor", "primary", "aggregate", "element_association", 
                   "qualified_expression", "function_call", "actual_parameter", 
                   "assignment_statement", "target", "procedure_call_statement", 
                   "sequence_of_statements", "statement", "simple_statement", 
                   "if_statement", "condition", "case_statement", "case_statement_alternative", 
                   "choice_list", "loop_statement", "iteration_scheme", 
                   "basic_loop", "for_loop", "discrete_range", "range", 
                   "while_loop", "begin_end_block", "exit_statement", "return_statement", 
                   "null_statement" ]

    EOF = Token.EOF
    ABS=1
    ACCESS=2
    ALL=3
    AND=4
    ARRAY=5
    AT=6
    BEGIN=7
    BODY=8
    CASE=9
    CONSTANT=10
    DECLARE=11
    DO=12
    ELSE=13
    ELSIF=14
    END=15
    EXIT=16
    FOR=17
    FUNCTION=18
    IF=19
    IN=20
    IS=21
    LIMITED=22
    LOOP=23
    MOD=24
    NEW=25
    NOT=26
    NULL=27
    OF=28
    OR=29
    OTHERS=30
    PACKAGE=31
    PRAGMA=32
    PRIVATE=33
    PROCEDURE=34
    PROTECTED=35
    RANGE=36
    RECORD=37
    RETURN=38
    REVERSE=39
    SUBTYPE=40
    TAGGED=41
    TASK=42
    THEN=43
    TYPE=44
    USE=45
    WHEN=46
    WHILE=47
    WITH=48
    XOR=49
    ID=50
    ADD=51
    SUB=52
    MUL=53
    DIV=54
    EQUALS=55
    NOTEQUALS=56
    LT=57
    GT=58
    LTE=59
    GTE=60
    BOX=61
    ASSIGN=62
    CONCAT=63
    POW=64
    COMMA=65
    SEMICOLON=66
    COLON=67
    LPAREN=68
    RPAREN=69
    LEFT_BRACKET=70
    RIGHT_BRACKET=71
    PERIOD=72
    DOT_DOT=73
    ARROW=74
    INT=75
    FLOAT=76
    CHAR=77
    STRING=78
    LINE_COMMENT=79
    BLOCK_COMMENT=80
    WS=81

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def package_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Package_declarationContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Package_declarationContext,i)


        def subprogram_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Subprogram_declarationContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Subprogram_declarationContext,i)


        def subprogram_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Subprogram_bodyContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Subprogram_bodyContext,i)


        def task_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Task_declarationContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Task_declarationContext,i)


        def task_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Task_bodyContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Task_bodyContext,i)


        def protected_type_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Protected_type_declarationContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Protected_type_declarationContext,i)


        def protected_type_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Protected_type_bodyContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Protected_type_bodyContext,i)


        def subunit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.SubunitContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.SubunitContext,i)


        def getRuleIndex(self):
            return AdaGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AdaGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4451733864448) != 0):
                self.state = 140
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 132
                    self.package_declaration()
                    pass

                elif la_ == 2:
                    self.state = 133
                    self.subprogram_declaration()
                    pass

                elif la_ == 3:
                    self.state = 134
                    self.subprogram_body()
                    pass

                elif la_ == 4:
                    self.state = 135
                    self.task_declaration()
                    pass

                elif la_ == 5:
                    self.state = 136
                    self.task_body()
                    pass

                elif la_ == 6:
                    self.state = 137
                    self.protected_type_declaration()
                    pass

                elif la_ == 7:
                    self.state = 138
                    self.protected_type_body()
                    pass

                elif la_ == 8:
                    self.state = 139
                    self.subunit()
                    pass


                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(AdaGrammarParser.PACKAGE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AdaGrammarParser.ID)
            else:
                return self.getToken(AdaGrammarParser.ID, i)

        def IS(self):
            return self.getToken(AdaGrammarParser.IS, 0)

        def END(self):
            return self.getToken(AdaGrammarParser.END, 0)

        def SEMICOLON(self):
            return self.getToken(AdaGrammarParser.SEMICOLON, 0)

        def package_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Package_declarationContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Package_declarationContext,i)


        def subprogram_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Subprogram_declarationContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Subprogram_declarationContext,i)


        def subprogram_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Subprogram_bodyContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Subprogram_bodyContext,i)


        def task_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Task_declarationContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Task_declarationContext,i)


        def task_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Task_bodyContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Task_bodyContext,i)


        def protected_type_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Protected_type_declarationContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Protected_type_declarationContext,i)


        def protected_type_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Protected_type_bodyContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Protected_type_bodyContext,i)


        def subunit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.SubunitContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.SubunitContext,i)


        def getRuleIndex(self):
            return AdaGrammarParser.RULE_package_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackage_declaration" ):
                listener.enterPackage_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackage_declaration" ):
                listener.exitPackage_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_declaration" ):
                return visitor.visitPackage_declaration(self)
            else:
                return visitor.visitChildren(self)




    def package_declaration(self):

        localctx = AdaGrammarParser.Package_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_package_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(AdaGrammarParser.PACKAGE)
            self.state = 146
            self.match(AdaGrammarParser.ID)
            self.state = 147
            self.match(AdaGrammarParser.IS)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4451733864448) != 0):
                self.state = 156
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 148
                    self.package_declaration()
                    pass

                elif la_ == 2:
                    self.state = 149
                    self.subprogram_declaration()
                    pass

                elif la_ == 3:
                    self.state = 150
                    self.subprogram_body()
                    pass

                elif la_ == 4:
                    self.state = 151
                    self.task_declaration()
                    pass

                elif la_ == 5:
                    self.state = 152
                    self.task_body()
                    pass

                elif la_ == 6:
                    self.state = 153
                    self.protected_type_declaration()
                    pass

                elif la_ == 7:
                    self.state = 154
                    self.protected_type_body()
                    pass

                elif la_ == 8:
                    self.state = 155
                    self.subunit()
                    pass


                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(AdaGrammarParser.END)
            self.state = 162
            self.match(AdaGrammarParser.ID)
            self.state = 163
            self.match(AdaGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subprogram_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subprogram_specification(self):
            return self.getTypedRuleContext(AdaGrammarParser.Subprogram_specificationContext,0)


        def SEMICOLON(self):
            return self.getToken(AdaGrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return AdaGrammarParser.RULE_subprogram_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubprogram_declaration" ):
                listener.enterSubprogram_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubprogram_declaration" ):
                listener.exitSubprogram_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubprogram_declaration" ):
                return visitor.visitSubprogram_declaration(self)
            else:
                return visitor.visitChildren(self)




    def subprogram_declaration(self):

        localctx = AdaGrammarParser.Subprogram_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_subprogram_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.subprogram_specification()
            self.state = 166
            self.match(AdaGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subprogram_specificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subprogram_head(self):
            return self.getTypedRuleContext(AdaGrammarParser.Subprogram_headContext,0)


        def IS(self):
            return self.getToken(AdaGrammarParser.IS, 0)

        def END(self):
            return self.getToken(AdaGrammarParser.END, 0)

        def ID(self):
            return self.getToken(AdaGrammarParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(AdaGrammarParser.SEMICOLON, 0)

        def subprogram_specification(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Subprogram_specificationContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Subprogram_specificationContext,i)


        def subprogram_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Subprogram_declarationContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Subprogram_declarationContext,i)


        def subprogram_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Subprogram_bodyContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Subprogram_bodyContext,i)


        def task_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Task_declarationContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Task_declarationContext,i)


        def task_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Task_bodyContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Task_bodyContext,i)


        def protected_type_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Protected_type_declarationContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Protected_type_declarationContext,i)


        def protected_type_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.Protected_type_bodyContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.Protected_type_bodyContext,i)


        def subunit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaGrammarParser.SubunitContext)
            else:
                return self.getTypedRuleContext(AdaGrammarParser.SubunitContext,i)


        def getRuleIndex(self):
            return AdaGrammarParser.RULE_subprogram_specification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubprogram_specification" ):
                listener.enterSubprogram_specification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubprogram_specification" ):
                listener.exitSubprogram_specification(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubprogram_specification" ):
                return visitor.visitSubprogram_specification(self)
            else:
                return visitor.visitChildren(self)




    def subprogram_specification(self):

        localctx = AdaGrammarParser.Subprogram_specificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_subprogram_specification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.subprogram_head()
            self.state = 169
            self.match(AdaGrammarParser.IS)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4449586380800) != 0):
                self.state = 178
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 170
                    self.subprogram_specification()
                    pass

                elif la_ == 2:
                    self.state = 171
                    self.subprogram_declaration()
                    pass

                elif la_ == 3:
                    self.state = 172
                    self.subprogram_body()
                    pass

                elif la_ == 4:
                    self.state = 173
                    self.task_declaration()
                    pass

                elif la_ == 5:
                    self.state = 174
                    self.task_body()
                    pass

                elif la_ == 6:
                    self.state = 175
                    self.protected_type_declaration()
                    pass

                elif la_ == 7:
                    self.state = 176
                    self.protected_type_body()
                    pass

                elif la_ == 8:
                    self.state = 177
                    self.subunit()
                    pass


                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 183
            self.match(AdaGrammarParser.END)
            self.state = 184
            self.match(AdaGrammarParser.ID)
            self.state = 185
            self.match(AdaGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subprogram_headContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(AdaGrammarParser.PROCEDURE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AdaGrammarParser.ID)
            else:
                return self.getToken(AdaGrammarParser.ID, i)

        def formal_part(self):
            return self.getTypedRuleContext(AdaGrammarParser.Formal_partContext,0)


        def FUNCTION(self):
            return self.getToken(AdaGrammarParser.FUNCTION, 0)

        def RETURN(self):
            return self.getToken(AdaGrammarParser.RETURN, 0)

        def getRuleIndex(self):
            return AdaGrammarParser.RULE_subprogram_head

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubprogram_head" ):
                listener.enterSubprogram_head(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubprogram_head" ):
                listener.exitSubprogram_head(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubprogram_head" ):
                return visitor.visitSubprogram_head(self)
            else:
                return visitor.visitChildren(self)




    def subprogram_head(self):

        localctx = AdaGrammarParser.Subprogram_headContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_subprogram_head)
        self._la = 0 # Token type
        try:
            self.state = 199
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.match(AdaGrammarParser.PROCEDURE)
                self.state = 188
                self.match(AdaGrammarParser.ID)
                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==68:
                    self.state = 189
                    self.formal_part()

